# TranscribeX

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
skills/transcribex-install/: SKILL.md
skills/transcribex-install/agents/: openai.yaml
skills/transcribex-install/scripts/: configure_env.py  detect_environment.py  setup_service.py
skills/transcribex-transcribe/: SKILL.md
skills/transcribex-transcribe/agents/: openai.yaml
skills/transcribex-transcribe/scripts/: transcribe_audio.py
tests/: test_normalization.py  test_runtime_config.py
transcribex/: audio.py  config.py  funasr_engine.py  main.py  normalization.py  profiles.py  runtime_config.py  schemas.py
transcribex/web/: __init__.py  admin.css  admin.html  admin.js
