[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribex"
version = "0.1.0"
description = "Self-hosted FunASR transcription API with speaker diarization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "starlette>=0.40.0,<0.46.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.4.0",
    "funasr>=1.3.3",
    "modelscope>=1.15.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["transcribex*"]

[tool.setuptools.package-data]
transcribex = ["web/*.html", "web/*.css", "web/*.js"]
